--- a/Workflow.bib
+++ b/Workflow.bib
@@ -897,7 +897,6 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0092867415005498},
 volume = {161},
 year = {2015}
 }
-
 @article{Saelens2019,
   title = {A Comparison of Single-Cell Trajectory Inference Methods},
   author = {Saelens, Wouter and Cannoodt, Robrecht and Todorov, Helena and Saeys, Yvan},
@@ -912,7 +911,6 @@ year = {2015}
   language = {en},
   number = {5}
 }
-
 @article{Smith1993,
   title = {Bayesian {{Computation Via}} the {{Gibbs Sampler}} and {{Related Markov Chain Monte Carlo Methods}}},
   author = {Smith, A. F. M. and Roberts, G. O.},
@@ -926,7 +924,7 @@ year = {2015}
   file = {/home/alan/Zotero/storage/W9RP9PJS/Smith and Roberts - 1993 - Bayesian Computation Via the Gibbs Sampler and Rel.pdf},
   journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
   language = {en},
-  number = {1}
+  number = {1}7
 }
 @article{Cowles1996,
   title = {Markov {{Chain Monte Carlo Convergence Diagnostics}}: {{A Comparative Review}}},
@@ -943,4 +941,59 @@ year = {2015}
   language = {en},
   number = {434}
 }
+@article{Eling2019,
+  title = {Challenges in Measuring and Understanding Biological Noise},
+  author = {Eling, Nils and Morgan, Michael D. and Marioni, John C.},
+  year = {2019},
+  month = sep,
+  volume = {20},
+  pages = {536--548},
+  issn = {1471-0056, 1471-0064},
+  doi = {10.1038/s41576-019-0130-6},
+  abstract = {Biochemical reactions are intrinsically stochastic, leading to variation in the production of mRNAs and proteins within cells. In the scientific literature, this source of variation is typically referred to as `noise'. The observed variability in molecular phenotypes arises from a combination of processes that amplify and attenuate noise. Our ability to quantify cell-t o-cell variability in numerous biological contexts has been revolutionized by recent advances in single-c ell technology, from imaging approaches through to `omics' strategies. However, defining, accurately measuring and disentangling the stochastic and deterministic components of cell-to-cell variability is challenging. In this Review, we discuss the sources, impact and function of molecular phenotypic variability and highlight future directions to understand its role.},
+  file = {/home/alan/Zotero/storage/X26SMRRG/Eling et al. - 2019 - Challenges in measuring and understanding biologic.pdf},
+  journal = {Nature Reviews Genetics},
+  language = {en},
+  number = {9}
+}
 
+@article{Townes2019,
+  title = {Feature Selection and Dimension Reduction for Single-Cell {{RNA}}-{{Seq}} Based on a Multinomial Model},
+  author = {Townes, F. William and Hicks, Stephanie C. and Aryee, Martin J. and Irizarry, Rafael A.},
+  year = {2019},
+  month = dec,
+  volume = {20},
+  pages = {295},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-019-1861-6},
+  abstract = {Single-cell RNA-Seq (scRNA-Seq) profiles gene expression of individual cells. Recent scRNA-Seq datasets have incorporated unique molecular identifiers (UMIs). Using negative controls, we show UMI counts follow multinomial sampling with no zero inflation. Current normalization procedures such as log of counts per million and feature selection by highly variable genes produce false variability in dimension reduction. We propose simple multinomial methods, including generalized principal component analysis (GLM-PCA) for non-normal distributions, and feature selection using deviance. These methods outperform the current practice in a downstream clustering assessment using ground truth datasets.},
+  file = {/home/alan/Zotero/storage/DVCYIZEA/Townes et al. - 2019 - Feature selection and dimension reduction for sing.pdf},
+  journal = {Genome Biology},
+  language = {en},
+  number = {1}
+}
+@article{Lopez2018,
+  title = {Deep Generative Modeling for Single-Cell Transcriptomics},
+  author = {Lopez, Romain and Regier, Jeffrey and Cole, Michael B. and Jordan, Michael I. and Yosef, Nir},
+  year = {2018},
+  month = dec,
+  volume = {15},
+  pages = {1053--1058},
+  issn = {1548-7091, 1548-7105},
+  doi = {10.1038/s41592-018-0229-2},
+  file = {/home/alan/Zotero/storage/ZGXHGR5W/Lopez et al. - 2018 - Deep generative modeling for single-cell transcrip.pdf},
+  journal = {Nature Methods},
+  language = {en},
+  number = {12}
+}
+@techreport{Amezquita2019,
+  title = {Orchestrating {{Single}}-{{Cell Analysis}} with {{Bioconductor}}},
+  author = {Amezquita, Robert A. and Carey, Vince J. and Carpp, Lindsay N. and Geistlinger, Ludwig and Lun, Aaron T. L. and Marini, Federico and {Rue-Albrecht}, Kevin and Risso, Davide and Soneson, Charlotte and Waldron, Levi and Pag{\`e}s, Herv{\'e} and Smith, Mike and Huber, Wolfgang and Morgan, Martin and Gottardo, Raphael and Hicks, Stephanie C.},
+  year = {2019},
+  month = mar,
+  institution = {{Genomics}},
+  doi = {10.1101/590562},
+  file = {/home/alan/Zotero/storage/SAKIES9G/Amezquita et al. - 2019 - Orchestrating Single-Cell Analysis with Bioconduct.pdf},
+  language = {en},
+  type = {Preprint}
+}
